# AlphaZeroC4

./: .gitignore  README.md  api_train.py  environment.yml
C_project/: CMakeLists.txt  alphazero_test.cpp  alphazero_test_position.cpp  alphazero_train.cpp  pipeline.sh
C_project/lib/: alphazero.cpp  alphazero.h  game.cpp  game.h  mcts.cpp  mcts.h  mcts_random.cpp  mcts_random.h  node.cpp  node.h  params.cpp  params.h
lib/: model.py
